--- a/css/toast-notification-popup.css
+++ b/css/toast-notification-popup.css
@@ -1,6 +1,6 @@
 ﻿/*
   Toast notification popup jQuery plugin Stylesheet
-  (c) 2016 Nupin Mathew <nupin_mathew@infosys.com>
+  (c) 2016 Nupin Mathew <nupindev@gmail.com>
   License: MIT
 */
 /*CSS for toast popup*/
