--- a/css/toast-notification-popup.css
+++ b/css/toast-notification-popup.css
@@ -17,7 +17,18 @@
     top: 25%;
     z-index: 500000;
 }
-
+.toast-popup.success{
+    background-color: rgba(46, 103, 46, 0.8);
+    box-shadow: 2px 2px 10px rgba(46, 103, 46, 0.8);
+}
+.toast-popup.warning{
+    background-color: rgba(189, 142, 41, 0.8);
+    box-shadow: 2px 2px 10px rgba(189, 142, 41, 0.8);
+}
+.toast-popup.error{
+    background-color: rgba(189, 41, 41, 0.8);
+    box-shadow: 2px 2px 10px rgba(189, 41, 41, 0.8);
+}
 @media screen and (min-width:768px) {
     .toast-popup {
         top: 35%;
